--- a/c99.html
+++ b/c99.html
@@ -64,12 +64,12 @@
 		<p>Being an asshole, I have logged your IP and made it <a href="c99log.txt">publicly available here</a>.</p>
 
 		<h2>Want to learn about hacking?</h2>
-		<p>Visit here.. <a href="https://www.youtube.com/c/hackntech" target="blank">./unknowndevice64 </a><br />
+		<p>Visit here.. <a href="https://www.youtube.com/c/hackntech" target="blank">./unknowndevice64 </a><br /><a href="#">
    _   _   _   _   _   _   _   _   _   _   _   _   _   _   _  
   / \ / \ / \ / \ / \ / \ / \ / \ / \ / \ / \ / \ / \ / \ / \ 
  ( u | n | k | n | o | w | n | d | e | v | i | c | e | 6 | 4 )
   \_/ \_/ \_/ \_/ \_/ \_/ \_/ \_/ \_/ \_/ \_/ \_/ \_/ \_/ \_/ 
-</p>
+</a></p>
 	</div>
 </body>
 </html>
